--- a/cifrasCollection/src/main/resources/application.properties
+++ b/cifrasCollection/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/cifrasCollection
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
